# camvid_sender

./: CMakeLists.txt  main.cpp  video_reader.cpp
